# llm-finetune-lab

./: .gitignore  .pre-commit-config.yaml  ALL_METHODS_COMPARISON.md  DOCKER.md  Dockerfile  Dockerfile.cuda12.0  LICENSE  PLANNING.md  README.md  TEST_RESULTS.md  TRAINING_RESULTS.md  VRAM_ANALYSIS.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg  test_gpu.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: gradio_app.py
configs/: dpo_16gb.yaml  lora_12gb.yaml  qlora_4gb.yaml  qlora_8gb.yaml
docs/: CUDA_VERSION_FIX.md  CUSTOM_DATA_GUIDE.md  DOCKER_COMPOSE_TESTING.md  DOCKER_GPU_TROUBLESHOOTING.md  DRIVER_UPDATE_GUIDE.md  MODEL_NAMING.md  QUICKSTART.md  README.md  VRAM_RAM_MANAGEMENT.md  WEB_UI_GUIDE.md  WEB_UI_TRAINING_VERIFIED.md
notebooks/: 01_QLoRA_Tutorial.ipynb
scripts/: check_env.py  convert.py  finetune.py  infer.py  merge.py  test_all_methods.py  test_all_methods_10epoch.py  test_alpaca.py  test_api.py  test_docker.sh  test_docker_webui.sh  test_dpo.py  test_install.py  test_rlhf.py  train.py  upload_to_hub.py
src/llm_ft/: __init__.py  config.py  data.py  evaluation.py  models.py  trainers.py  utils.py
tests/: __init__.py  test_config.py  test_utils.py
